# SIDBox64

./: Cargo.toml  README.md
crates/app/: Cargo.toml
crates/app/src/: main.rs  theme.rs
crates/asid/: Cargo.toml
crates/asid/src/: kits.rs  lib.rs  sample.rs
crates/core/: Cargo.toml
crates/core/src/: file.rs  lib.rs  presets.rs  sequencer.rs  types.rs
crates/midi/: Cargo.toml
crates/midi/src/: lib.rs
